Gave TST a typewriter font.

--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -55,7 +55,7 @@
 \[
 \frac{\Gamma\vdash^mt\quad\Gamma\vdash^he^h:t}{\Gamma\vdash^m\mathtt{mh}\;t\;e^h:t}
 \quad
-\frac{\Gamma\vdash^mt\quad\Gamma\vdash^se^s:TST}{\Gamma\vdash^m\mathtt{ms}\;t\;e^s:t[t_{i}/t.x^m_{i}]}
+\frac{\Gamma\vdash^mt\quad\Gamma\vdash^se^s:\mathtt{TST}}{\Gamma\vdash^m\mathtt{ms}\;t\;e^s:t[t_{i}/t.x^m_{i}]}
 \]
 \caption{ML typing rules}
 \label{mtr}
