--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -2,47 +2,27 @@
 \centering
 \begin{tabular}{l}
 
-% hs t (sh t e)
-
 $\mathscr{E}[\mathtt{hs}$ $t$ $(\mathtt{sh}$ $t$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$ \\
-
-% hs N n
 
 $\mathscr{E}[\mathtt{hs}$ $\mathtt{N}$ $\overline{n}]^h\rightarrow\mathscr{E}[\overline{n}]$ \\
 
-% hs N v
-
 $\mathscr{E}[\mathtt{hs}$ $\mathtt{N}$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $\mathtt{N}$ ``Not a number"$]$ $(v^s\neq\overline{n})$ \\
-
-% hs [t] nil
 
 $\mathscr{E}[\mathtt{hs}$ $[t]$ $\mathtt{nil}]^h\rightarrow\mathscr{E}[\mathtt{nil}$ $t[t_i/t_i.x^h]]$ \\
 
-% hs [t] (cons v v)
-
 $\mathscr{E}[\mathtt{hs}$ $[t]$ $(\mathtt{cons}$ $v^s_1$ $v^s_2)]^h\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{hs}$ $t$ $v^s_1)$ $(\mathtt{hs}$ $[t]$ $v^s_2)]$ \\
-
-% hs [t] v
 
 $\mathscr{E}[\mathtt{hs}$ $[t]$ $v^s_1]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $[t[t_i/t_i.x^h]]$ ``Not a list"$]$ \\
 
 $\quad(v^s_1\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v^s_2$ $v^s_3,\mathtt{sh}$ $[t]$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)\rbrace)$ \\
 
-% hs (t.x) v
-
 $\mathscr{E}[\mathtt{hs}$ $(t.x^h)$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $t$ ``Parametricity violated"$]$ $(v^s\neq \mathtt{sh}$ $(t.x^h)$ $e^h)$ \\
-
-% hs (t->t) (\x.e)
 
 $\mathscr{E}[\mathtt{hs}$ $(t_1\rightarrow t_2)$ $(\lambda x^s.e^s)]^h\rightarrow\mathscr{E}[\lambda x^h:t_1[t_i/t_i.x^h].\mathtt{hs}$ $t_2$ $((\lambda x^s.e^s)$ $(\mathtt{sh}$ $t_1$ $x^h))]$ \\
 
-% hs (t->t) v
-
 $\mathscr{E}[\mathtt{hs}$ $(t_1\rightarrow t_2)$ $v^s]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $(t_1\rightarrow t_2)[t_i/t_i.x^h]$ ``Not a function"$]$ $(v^s\neq\lambda x^s.e^s)$ \\
 
-% (hs (Ax.t) v) {t}
-
-$\mathscr{E}[(\mathtt{hs}$ $(\forall x^h.t_1)$ $v^s)$ $\lbrace t_2\rbrace]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $(t_1[t_2.x^h/x^h])$ $v^s]$
+$\mathscr{E}[(\mathtt{hs}$ $(\forall x^h.t_1)$ $v^s)$ $\lbrace t_2\rbrace]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $t_1[t_2.x^h/x^h]$ $v^s]$
 
 \end{tabular}
 \caption{Haskell-Scheme operational semantics}
