--- a/model/scheme/typing-rules.tex
+++ b/model/scheme/typing-rules.tex
@@ -1,39 +1,39 @@
 \begin{figure}[p]
 \[
-\frac{}{\vdash_{S}TST}
+\frac{}{\vdash^s\mathtt{TST}}
 \]
 \bigskip
 \[
-\frac{\Gamma,x:TST\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}\lambda x.e_{S}:TST}
+\frac{\Gamma,x^s:\mathtt{TST}\vdash^se^s:\mathtt{TST}}{\Gamma\vdash^s\lambda x^s.e^s:\mathtt{TST}}
 \quad
-\frac{}{\vdash_{S}\overline{n}:TST}
+\frac{}{\vdash^s\overline{n}:\mathtt{TST}}
 \quad
-\frac{}{\vdash_{S}\mathtt{nil}:TST}
+\frac{}{\vdash^s\mathtt{nil}:\mathtt{TST}}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}\mathtt{cons}\;e_{S}^{1}\;e_{S}^{2}:TST}
+\frac{\Gamma\vdash^se^s_1:\mathtt{TST}\quad\Gamma\vdash^se^s_2:\mathtt{TST}}{\Gamma\vdash^s\mathtt{cons}\;e^s_1\;e^s_2:\mathtt{TST}}
 \quad
-\frac{x:TST\in\Gamma}{\Gamma\vdash_{S}x:TST}
+\frac{}{\Gamma,x^s:\mathtt{TST}\vdash^sx^s:\mathtt{TST}}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}e_{S}^{1}\;e_{S}^{2}:TST}
+\frac{\Gamma\vdash^se^s_1:\mathtt{TST}\quad\Gamma\vdash^se^s_2:\mathtt{TST}}{\Gamma\vdash^se^s_1\;e^s_2:\mathtt{TST}}
 \quad
-\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}f\;e_{S}:TST}
+\frac{\Gamma\vdash^se^s:\mathtt{TST}}{\Gamma\vdash^sf\;e^s:\mathtt{TST}}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}o\;e_{S}^{1}\;e_{S}^{2}:TST}
+\frac{\Gamma\vdash^se^s_1:\mathtt{TST}\quad\Gamma\vdash^se^s_2:\mathtt{TST}}{\Gamma\vdash^so\;e^s_1\;e^s_2:\mathtt{TST}}
 \quad
-\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}p\;e_{S}:TST}
+\frac{\Gamma\vdash^se^s:\mathtt{TST}}{\Gamma\vdash^sp\;e^s:\mathtt{TST}}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST\quad\Gamma\vdash_{S}e_{S}^{3}:TST}{\Gamma\vdash_{S}\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}:TST}
+\frac{\Gamma\vdash^se^s_1:\mathtt{TST}\quad\Gamma\vdash^se^s_2:\mathtt{TST}\quad\Gamma\vdash^se^s_3:\mathtt{TST}}{\Gamma\vdash^s\mathtt{if0}\;e^s_1\;e^s_2\;e^s_3:\mathtt{TST}}
 \quad
-\frac{}{\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
+\frac{}{\vdash^s\mathtt{wrong}\;\mathrm{string}:\mathtt{TST}}
 \]
 \[
-\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}SH^{T}\;e_{H}:TST}
+\frac{\Gamma\vdash^ht\quad\Gamma\vdash^he^h:t[t_i/t_i.x^h]}{\Gamma\vdash^s\mathtt{sh}\;t\;e^h:\mathtt{TST}}
 \quad
-\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}SM^{T}\;e_{M}:TST}
+\frac{\Gamma\vdash^mt\quad\Gamma\vdash^me^m:t[t_i/t_i.x^m]}{\Gamma\vdash^s\mathtt{sm}\;t\;e^m:\mathtt{TST}}
 \]
 \caption{Scheme typing rules}
 \label{str}
