Revised the core Scheme op sem for the new syntax.

--- a/model/scheme/operational-semantics/haskell.tex
+++ b/model/scheme/operational-semantics/haskell.tex
@@ -14,6 +14,11 @@ $\quad\mathscr{E}[\lambda x_{2}.(SH^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^
 $\mathscr{E}[SH^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T[L/X]}$ $((\Lambda X.e_{H})$ $\lbrace L\rbrace)]$ \\
 % sh - universal - hs
 $\mathscr{E}[SH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
+
+$\mathscr{E}[\mathtt{hd}$ $(\mathtt{sh}^{[t]}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2))]^s\rightarrow\mathscr{E}[\mathtt{sh}^{t}$ $e^h_1]$ \\
+
+$\mathscr{E}[\mathtt{tl}$ $(\mathtt{sh}^{[t]}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2))]^s\rightarrow\mathscr{E}[\mathtt{sh}^{[t]}$ $e^h_2]$ \\
+
 \end{tabular}
 \caption{Scheme-Haskell operational semantics}
 \label{isos}
