--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -1,24 +1,26 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{l}
-% sm - mh 
+
 $\mathscr{E}[SM^{T}$ $(^{T}MH^{T}$ $e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T}$ $e_{H}]$ \\
-% sm - lump
+
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
-% sm - number
+
 $\mathscr{E}[SM^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
-% sm - list - nil
+
 $\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
-% sm - list - cons
+
 $\mathscr{E}[SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{S}\rightarrow\mathscr{E}[\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})]$ \\
-% sm - function
+
 $\mathscr{E}[SM^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})]_{S}\rightarrow$ \\
+
 $\quad\mathscr{E}[\lambda x_{2}.(SM^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})$ $(^{T_{1}}MS$ $x_{2})))]$ \\
-% sm - universal
+
 $\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{M})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
-% sm - universal - ms
+
 $\mathscr{E}[SM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
+
 \end{tabular}
 \caption{Scheme-ML operational semantics}
-\label{isos}
+\label{smos}
 \end{figure}
