Revised the SH op sem to use the new syntax.

--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -2,23 +2,23 @@
 \centering
 \begin{tabular}{l}
 
-$\mathscr{E}[SM^{T}$ $(^{T}MH^{T}$ $e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T}$ $e_{H}]$ \\
+$\mathscr{E}[\mathtt{sm}$ $t$ $(\mathtt{mh}$ $t$ $e^h)]^s\rightarrow\mathscr{E}[\mathtt{sh}$ $t$ $e^h]$ \\
 
-$\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
+$\mathscr{E}[\mathtt{sm}$ $\mathtt{L}$ $(\mathtt{ms}$ $\mathtt{L}$ $v^s)]^s\rightarrow\mathscr{E}[v^s]$ \\
 
-$\mathscr{E}[SM^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
+$\mathscr{E}[\mathtt{sm}$ $\mathtt{N}$ $\overline{n}]^s\rightarrow\mathscr{E}[\overline{n}]$ \\
 
-$\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
+$\mathscr{E}[\mathtt{sm}$ $[t]$ $(\mathtt{nil}$ $t[t_i/t_i.x^m])]^s\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
 
-$\mathscr{E}[SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{S}\rightarrow\mathscr{E}[\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})]$ \\
+$\mathscr{E}[\mathtt{sm}$ $[t]$ $(\mathtt{cons}$ $v^m_1$ $v^m_2)]^s\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{sm}$ $t$ $v^m_1)$ $(\mathtt{sm}$ $[t]$ $v^m_2)]$ \\
 
-$\mathscr{E}[SM^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})]_{S}\rightarrow$ \\
+$\mathscr{E}[\mathtt{sm}$ $(t_1\rightarrow t_2)$ $(\lambda x^m:t_1[t_i/t_i.x^m].e^m)]^s\rightarrow$ \\
 
-$\quad\mathscr{E}[\lambda x_{2}.(SM^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})$ $(^{T_{1}}MS$ $x_{2})))]$ \\
+$\quad\quad\mathscr{E}[\lambda x^s.\mathtt{sm}$ $t_2$ $((\lambda x^m:t_1[t_i/t_i.x^m].e^m)$ $(\mathtt{ms}$ $t_1$ $x^s))]$ \\
 
-$\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{M})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
+$\mathscr{E}[\mathtt{sm}$ $(\forall x^m.t)$ $(\Lambda x^m.e^m)]^s\rightarrow\mathscr{E}[\mathtt{sm}$ $t[\mathtt{L}/x^m]$ $e^m[\mathtt{L}/x^m]]$ \\
 
-$\mathscr{E}[SM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
+$\mathscr{E}[\mathtt{sm}$ $(\forall x^m.t)$ $(\mathtt{ms}$ $(\forall x^m.t)$ $v^s)]^s\rightarrow\mathscr{E}[v^s]$
 
 \end{tabular}
 \caption{Scheme-ML operational semantics}
